--- a/Enfoca/Features/Shared/TagSelection.storyboard
+++ b/Enfoca/Features/Shared/TagSelection.storyboard
@@ -1,45 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Yij-YD-eB6">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Yij-YD-eB6">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Tag Selection View Controller-->
         <scene sceneID="HIX-wx-Rt2">
             <objects>
-                <viewController storyboardIdentifier="TagSelectionViewController" id="Yij-YD-eB6" customClass="TagSelectionViewController" customModule="Enfoca" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TagSelectionViewController" id="Yij-YD-eB6" customClass="TagSelectionViewController" customModule="Data_Import" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="weV-Y9-On2"/>
                         <viewControllerLayoutGuide type="bottom" id="YrD-6e-jRP"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="E8V-fH-HEr">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="132"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="khl-B3-aHO">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="132"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="4" minimumInteritemSpacing="4" id="hkd-EH-5Uh">
-                                    <size key="itemSize" width="116" height="116"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="4" minimumInteritemSpacing="4" id="hkd-EH-5Uh">
+                                    <size key="itemSize" width="120" height="120"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="4" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="8" minY="8" maxX="8" maxY="8"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="TagCollectionViewCellId" reuseIdentifier="TagCollectionViewCellId" id="FIV-Lc-5Qd" customClass="TagCollectionViewCell" customModule="Enfoca" customModuleProvider="target">
-                                        <rect key="frame" x="4" y="8" width="116" height="116"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="TagCollectionViewCellId" reuseIdentifier="TagCollectionViewCellId" id="FIV-Lc-5Qd" customClass="TagCollectionViewCell" customModule="Data_Import" customModuleProvider="target">
+                                        <rect key="frame" x="8" y="8" width="150" height="150"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="116" height="116"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="One word is a lot of words even more than" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k8I-1u-kWm">
-                                                    <rect key="frame" x="4" y="4" width="108" height="108"/>
+                                                    <rect key="frame" x="4" y="4" width="142" height="142"/>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -53,7 +53,7 @@
                                             <constraint firstItem="k8I-1u-kWm" firstAttribute="top" secondItem="FIV-Lc-5Qd" secondAttribute="top" constant="4" id="Qj1-Oh-fKx"/>
                                             <constraint firstAttribute="trailing" secondItem="k8I-1u-kWm" secondAttribute="trailing" constant="4" id="TsJ-eM-TAs"/>
                                         </constraints>
-                                        <size key="customSize" width="116" height="116"/>
+                                        <size key="customSize" width="150" height="150"/>
                                         <connections>
                                             <outlet property="titleLabel" destination="k8I-1u-kWm" id="eub-To-X2z"/>
                                         </connections>
@@ -78,7 +78,7 @@
                     </view>
                     <nil key="simulatedStatusBarMetrics"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="375" height="132"/>
+                    <size key="freeformSize" width="375" height="150"/>
                     <connections>
                         <outlet property="collectionView" destination="khl-B3-aHO" id="jnc-eh-yXd"/>
                     </connections>
